CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.8

	- Documentation updates (STR #2785)
	- cupstestppd incorrectly reported a warning about the PPD format
	  version in some locales (STR #2854)
	- cupsGetPPD() and friends incorrectly returned a PPD file for
	  a class with no printers.
	- The member-uris values for local printers in a class returned
	  by the scheduler did not reflect the connected hostname or
	  port.
	- The CUPS PHP extension was not thread-safe (STR #2828)
	- The scheduler incorrectly added the document-format-default
	  attribute to the list of "common" printer attributes, which
	  over time would slow down the printing system (STR #2755,
	  STR #2836)
	- The cups-deviced and cups-driverd helper programs did not set
	  the CFProcessPath environment variable on Mac OS X (STR #2837)
	- "lpstat -p" could report the wrong job as printing (STR #2845)
	- The scheduler would crash when some cupsd.conf directives
	  were missing values (STR #2849)
	- The web interface "move jobs" operation redirected users to
	  the wrong URL (STR #2815)
	- The Polish web interface translation contained errors
	  (STR #2815)
	- The scheduler did not report PostScript printer PPDs with
	  filters as PostScript devices.
	- The scheduler did not set the job document-format attribute
	  for jobs submitted using Create-Job and Send-Document.
	- cupsFileTell() did not work for log files opened in append
	  mode (STR #2810)
	- The scheduler did not set QUERY_STRING all of the time
	  for CGI scripts (STR #2781, STR #2816)
	- The scheduler now returns an error for bad job-sheets
	  values (STR #2775)
	- Authenticated remote printing did not work over domain
	  sockets (STR #2750)
	- The scheduler incorrectly logged errors for print filters
	  when a job was canceled (STR #2806, #2808)
	- The scheduler no longer allows multiple RSS subscriptions
	  with the same URI (STR #2789)
	- The scheduler now supports Kerberized printing with
	  multiple server names (STR #2783)