@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.8
 
 	- Documentation updates (STR #2785)
+	- The scheduler did not generate printer-state events when the
+	  default printer was changed (STR #2764)
 	- cupstestppd incorrectly reported a warning about the PPD format
 	  version in some locales (STR #2854)
 	- cupsGetPPD() and friends incorrectly returned a PPD file for
